New Changes commited

--- a/src/test/resources/com/zohocrm/properties/OR.properties
+++ b/src/test/resources/com/zohocrm/properties/OR.properties
@@ -7,4 +7,14 @@ loginlink_CSS =div.zgh-utilities>div.zgh-accounts>.zgh-login
 userName_CSS = #login_id
 nextButton_CSS = #login>#nextbtn
 password_CSS= #password
-signin_XPATH = #login>#nextbtn
+signin_CSS = #login>#nextbtn
+
+#Account Page
+accountsMenu_CSS =#crmpluscommonui_crm_Accounts
+createAccountsButton_CSS =//button[contains(text(),'Create Account')]
+
+#button.customPlusBtn.crm-font-bold.newwhitebtn.cP
+#Create Account Page
+accountName_CSS=//input[@id='Crm_Accounts_ACCOUNTNAME']
+saveAccounts_XPATH=//input[@id='saveAccountsBtn']
+accountsiframe_XPATH=//iframe[@id='crmLoadFrame']
