--- a/pom.xml
+++ b/pom.xml
@@ -123,7 +123,11 @@
 			<version>2.3.0</version>
 		</dependency>
 
-
+<dependency>
+<groupId>org.apache.maven.plugins</groupId>
+<artifactId>maven-compiler-plugin</artifactId>
+<version>3.8.1</version>
+</dependency>
 
 	</dependencies>
 
